# GestureVision

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
assets/themes/: accessibility_high_contrast.qss  dark.qss
config/: accessibility.yaml  app.yaml  camera.yaml  effects.yaml  gestures.yaml  logging.yaml
docs/: architecture.md
docs/adr/: 001-pyqt6-ui.md  002-threaded-pipeline.md
src/gesturevision/: __init__.py  __main__.py
src/gesturevision/accessibility/: __init__.py  app_launcher.py  conversation_manager.py  feedback_manager.py  gesture_menu.py  learning.py  messages.py  next_step_guide.py  picture_cards.py  profile_config.py  speech_utils.py  touch_navigation.py  tts_service.py  voice_commands.py  voice_onboarding.py  voice_parser.py  youtube_music.py
src/gesturevision/ai/: __init__.py
src/gesturevision/app/: __init__.py  application.py  controller.py  state_machine.py
src/gesturevision/camera/: __init__.py  capture.py  capture_thread.py
src/gesturevision/core/: __init__.py  contracts.py  events.py  exceptions.py  frame_buffer.py  pipeline.py  types.py
tests/unit/: test_accessibility.py  test_camera_capture.py  test_config_and_state.py  test_conversation.py  test_cursor_mapper.py  test_dandelion_gestures.py  test_debouncer.py  test_effects.py  test_event_bus.py  test_finger_controller.py  test_fps_counter.py  test_frame_buffer.py  test_gesture_recognizer.py  test_gesture_router.py  test_hand_mesh.py  test_interactive_effects.py  test_picture_cards.py  test_smoothing.py  test_x_sign_and_ink.py  test_youtube_music.py
(+75 files in other folders)
