[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gesturevision-ai"
version = "0.1.0"
description = "Real-time finger-controlled computer vision system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GestureVision" }]
dependencies = [
    "opencv-python>=4.8",
    "mediapipe>=0.10",
    "numpy>=1.24",
    "PyQt6>=6.5",
    "PyYAML>=6.0",
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
]

[project.scripts]
gesturevision = "gesturevision.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
